<resources>
    <string name="app_name">OCTracer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_category">Category</string>
    <string name="action_sign_in">Login</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="too_many_emails">%1$d emails are found with this email</string>
    <string name="no_users_found">No users found</string>
    <string name="please_select_a_role">Please select a role</string>
    <string name="role_not_found">Role not found</string>
    <string name="role">Role</string>

    <string name="admin">Admin</string>
    <string name="graduate">Graduate</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="year_graduated">Year Graduated</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="example_mobile_number">09123456789</string>
    <string name="occupation">Occupation</string>

    <string name="you_don_t_have_an_access_to_this_page">You don\'t have an access to this page</string>
    <string name="your_current_user_is">Your current user is %1$s</string>
    <string name="ok">OK</string>

    <string name="this_field_requires_minimum_characters">This field required %1$d minimum characters</string>
    <string name="this_field_requires_characters">This field required %1$d minimum characters</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="this_input_is_invalid">This input is invalid</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="password_should_match">Password should match</string>
    <string name="this_email_is_already_taken">This email is already taken</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure that you want to logout?</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_user_message">Are you sure that you want to delete <b>%1$s</b>\'s account??</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="registered_list">Registered List</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="profile_pic_path">images/%1$s.jpg</string>
    <string name="upload_edit_profile_picture">Upload / Update Profile Picure</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="verification">Verification</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="no_records_found">No Records Found</string>
    <string name="update_error">Update error</string>
    <string name="verified_successfully">Verified successfully</string>
    <string name="user_declined">User declined</string>
    <string name="registered_users">Registered users</string>

</resources>