<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_horizontal_margin">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/profilePicImageView"
            android:layout_width="@dimen/profile_pic_size"
            android:layout_height="@dimen/profile_pic_size" />

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:text="Hello" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="Hello" />

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="Hello" />

        <TextView
            android:id="@+id/occupationTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="Hello" />

        <TextView
            android:id="@+id/yearGraduatedTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="Hello" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/adminActionButtonsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

            <View
                android:layout_width="@dimen/list_divider_size"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>